// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationDisplay renders 1`] = `
<div>
  Organization
  <b>
    Name
  </b>
  <span>
    contains
  </span>
  <b>
    "foo organization name"
  </b>
</div>
`;

exports[`OrganizationDisplay renders as a Date Time criteria 1`] = `
<div>
  Organization
  <b>
    Date Modified
  </b>
  <span>
    is
  </span>
  <b>
    Feb 11, 2020, 10:16 PM
  </b>
</div>
`;

exports[`OrganizationDisplay renders as a known criteria 1`] = `
<div>
  Organization
  <b>
    Name
  </b>
  <span>
    is known
  </span>
</div>
`;

exports[`OrganizationDisplay renders as a referenced entity criteria 1`] = `
<div>
  Organization
  <b>
    Organization
  </b>
  <span>
    is
  </span>
  <b>
    'Foo Organization'
  </b>
</div>
`;
